cmake_minimum_required(VERSION 3.15)
project(Lab2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab2 main.cpp matrix.cpp matrix.h summatrices.cpp summatrices.h productmatrices.cpp productmatrices.h transposematrices.cpp transposematrices.h determinantmatrices.cpp determinantmatrices.h normalizedmatrices.cpp normalizedmatrices.h)